--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -84,5 +84,8 @@ main {
 }
 
 .hero-image {
+    padding: 0;
+    margin: 0;
+    display: flex;
     width: 100%;
 }
