--- a/src/styles/nav-menu.css
+++ b/src/styles/nav-menu.css
@@ -23,5 +23,6 @@ nav {
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
     }
 }
